# longterm-memory-proto

./: .gitignore  .pre-commit-config.yaml  AGENT.md  API_TEST_GUIDE.md  PROMPT_BY_PHASE.md  README.md  SYSTEM_PROMPT.md  extended_profiles_sample.json  memories.db  sora_profile_fixed.json  test_api.py  test_chat.json  test_profile.json  test_profile.py  user_profiles.db
backend/: .gitignore  extended_profiles.json  generate_knowledge.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_all.py  test_episodic_memory.py  test_memory_quality.py
backend/app/: analysis_layer.py  config.py  episodic_memory.py  extended_profile.py  knowledge_base.py  main.py  memory_consolidation.py  memory_system.py  user_profile.py
backend/tests/: test_all.py  test_episodic_memory.py  test_importance.py  test_memory_consolidation.py  test_memory_quality.py  test_rag.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  EmotionHistory.tsx  ExpandableProfile.tsx  ExtendedProfileManager.tsx  MemoryDisplay.tsx  MemoryInsights.tsx  ModelSettings.css  ModelSettings.tsx  ProfileDebug.tsx  SystemPromptEditor.tsx  index.css
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx
